[tool.poetry]
name = "test-hooks"
version = "0.2.0"
description = "Test post-merge hooks"
authors = ["Ke Xue <xueke.kent@gmail.com>"]
readme = "README.md"
packages = [{include = "test_hooks"}]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "< 2022.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
